# fern

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Dockerfile.backend  Dockerfile.frontend  README.md  SPEC.md  docker-compose.yml  fern-phase0-checklist.md  fern-phase1-checklist.md  fern-phase2-checklist.md  fern-phase3-checklist.md  fern-phase4-5-checklist.md  fern-phase4-checklist.md
fern/: .env.example  SPEC.md  drizzle.config.ts  fern-spec.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
fern/drizzle/: 0000_woozy_hairball.sql
fern/drizzle/meta/: 0000_snapshot.json  _journal.json
fern/src/: config.ts  index.ts
fern/src/core/: context.ts  engine.ts  scheduler.ts
fern/src/db/: client.ts  migrate.ts  schema.ts
fern/src/llm/: client.ts  prompts.ts  tools.ts
fern/src/messaging/: index.ts  router.ts  twilio.ts  types.ts
fern/src/tools/: calendar.ts  email.ts  index.ts  notes.ts  reminders.ts  web.ts
fern/tests/: core.test.ts  db.test.ts  engine.test.ts  llm.test.ts  messaging.test.ts  setup.ts  tools.test.ts
src/: bot.rs  config.rs  echo.rs  lib.rs  main.rs  sender.rs
src/adapter/: mod.rs  orchestrator_handler.rs  signal.rs
src/ai/: anthropic.rs  cerebras.rs  mod.rs
src/db/: messages.rs  mod.rs
src/engine/: conversation.rs
src/memory/: consolidator.rs  mod.rs
src/orchestrator/: engine.rs  mod.rs
src/tools/: delete.rs  dynamic.rs  generator.rs  http_tool.rs  improve.rs  loader.rs  memory.rs  mod.rs  personality.rs  remind.rs  request_tool.rs  script_tool.rs  search.rs  time.rs
tests/: echo_test.rs
(+3 files in other folders)
