[package]
name = "fern"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[dependencies]
matrix-sdk = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
dotenvy = "0.15"
rusqlite = { version = "0.30", features = ["bundled"] }

[dev-dependencies]
tokio-test = "0.4"
wiremock = "0.5"
